--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "autoprefixer": "^10.0.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2"
+  },
+  "resolutions": {
+    "terser": "3.14.1"
   }
 }
