--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/runtime": "^7.23.6",
     "jquery": "^3.7.1",
     "next": "^11.1.2",
+    "postcss": "^7.0.39",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^9.8.8",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2"
   },
